finish eval nnotebook

--- a/cond-task-eval.ipynb
+++ b/cond-task-eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +79,33 @@
     "\n",
     "CHECKPOINT_DIR = Path('./experiment-result')\n",
     "\n",
+    "TESTING_DATASET_SEGMENT_LENGTH = 10.0\n",
+    "TESTING_DATASET_BATCH_SIZE = 5\n",
+    "TESTING_DATASET_SAMPLE_INDEX = [10, 20, 100, 200, 234]\n",
+    "\n",
+    "# Single chain without tanh\n",
+    "# JOB_NAME = '2023-5-9-22-34-47'\n",
+    "# EPOCH = 54\n",
+    "\n",
+    "# Side chain without tanh\n",
+    "# JOB_NAME = '2023-5-10-7-1-39'\n",
+    "# EPOCH = 68\n",
+    "\n",
     "# Single chain with tanh\n",
     "# JOB_NAME = '2023-5-10-15-27-38'\n",
     "# EPOCH = 66\n",
     "\n",
     "# Side chain with tanh\n",
-    "JOB_NAME = '2023-5-10-23-54-7'\n",
-    "EPOCH = 66\n",
+    "# JOB_NAME = '2023-5-10-23-54-7'\n",
+    "# EPOCH = 66\n",
     "\n",
-    "TESTING_DATASET_SEGMENT_LENGTH = 10.0\n",
-    "TESTING_DATASET_BATCH_SIZE = 5\n",
-    "TESTING_DATASET_SAMPLE_INDEX = [10, 20, 100, 200, 234]"
+    "# Single chain with parametered tanh\n",
+    "# JOB_NAME = '2023-6-28-3-32-47'\n",
+    "# EPOCH = 52\n",
+    "\n",
+    "# Side chain with parametered tanh\n",
+    "JOB_NAME = '2023-6-28-16-11-36'\n",
+    "EPOCH = 40"
    ]
   },
   {
@@ -102,94 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'batch_size': 64,\n",
-      " 'checkpoint_dir': PosixPath('experiment-result'),\n",
-      " 'data_segment_length': 1.0,\n",
-      " 'dataset_dir': PosixPath('data/SignalTrain'),\n",
-      " 'enable_learning_rate_scheduler': True,\n",
-      " 'epoch': 70,\n",
-      " 'learning_rate': 0.001,\n",
-      " 'log_wandb': True,\n",
-      " 'loss': 'ESR+DC+Multi-STFT',\n",
-      " 'loss_filter_coef': 0.85,\n",
-      " 'model_activation': 'PReLU',\n",
-      " 'model_convert_to_decibels': False,\n",
-      " 'model_depth': 4,\n",
-      " 'model_film_take_batchnorm': True,\n",
-      " 'model_inner_audio_channel': 32,\n",
-      " 'model_s4_hidden_size': 4,\n",
-      " 'model_take_parametered_tanh': False,\n",
-      " 'model_take_residual_connection': True,\n",
-      " 'model_take_side_chain': True,\n",
-      " 'model_take_tanh': True,\n",
-      " 'random_seed': 42,\n",
-      " 's4_learning_rate': 0.001,\n",
-      " 'save_checkpoint': True,\n",
-      " 'wandb_entity': 'int0thewind',\n",
-      " 'wandb_project_name': 'S4 Dynamic Range Compressor'}\n",
-      "The SignalTrain dataset has been downloaded. Skipping ... \n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66d40865010346179941c763e76df879",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading test dataset.:   0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29858f77136c4592a39097c8e578de87",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading test dataset.:   0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "869d6cc8e9d243a58fb414a875e911f8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading test dataset.:   0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job_dir = CHECKPOINT_DIR / JOB_NAME\n",
     "job_eval_dir = job_dir / 'evaluations'\n",
@@ -222,6 +153,7 @@
     "    param.model_convert_to_decibels,\n",
     "    param.model_take_tanh,\n",
     "    param.model_activation,\n",
+    "    param.model_take_parametered_tanh,\n",
     ").eval().to(device)\n",
     "model.load_state_dict(torch.load(CHECKPOINT_DIR / JOB_NAME / f'model-epoch-{EPOCH}.pth', map_location=device))"
    ]
@@ -236,52 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "460a8d64fd934ece870a233f65d6dd4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing short datset.:   0%|          | 0/90 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06037998852644dcbde938c5030b05ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing mid datset.:   0%|          | 0/34 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74bcd0bbabca4ebb80f4b8413d1bfe2c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing long datset.:   0%|          | 0/14 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@torch.no_grad()\n",
     "def test():\n",
@@ -326,66 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57565d9b2565494099f31ea86725aafe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Block 0.:   0%|          | 0/32 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0563ed55f16491e91ac1a06a6f6b82d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Block 1.:   0%|          | 0/32 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5b1f7aa6c974344b1610517cd191995",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Block 2.:   0%|          | 0/32 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dab38c1b8c944e9875eb7572e6f523b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Block 3.:   0%|          | 0/32 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@torch.no_grad()\n",
     "def s4_frequency_response_analysis():\n",
@@ -426,87 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Doing inference speed test on NVIDIA GeForce RTX 3090.\n",
-      "Individual sample length: 10.0 seconds.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d92cb04825444befa09cc2eb26a13a48",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average inference time on short dataset: 8.3386799 ms.\n",
-      "Inference time standard deviation on short dataset: 0.18501996428160575 ms.\n",
-      "Real-time speed ratio on short dataset: 0.00083386799.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de43e772afa34d1591ea3a2de4c962f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average inference time on mid dataset: 20.916303 ms.\n",
-      "Inference time standard deviation on mid dataset: 0.23312371901441328 ms.\n",
-      "Real-time speed ratio on mid dataset: 0.0020916303.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "474d3bf6a211476abe1dbabc7cf16603",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average inference time on long dataset: 51.317885700000005 ms.\n",
-      "Inference time standard deviation on long dataset: 0.12429843326450704 ms.\n",
-      "Real-time speed ratio on long dataset: 0.00513178857.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@torch.no_grad()\n",
     "def evaluate_inference_efficiency():\n",
@@ -530,11 +284,16 @@
     "            inference_time.append(toc - tic)\n",
     "        \n",
     "        inference_time_mean = mean(inference_time) / 1e6\n",
-    "        print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms.')\n",
     "        inference_time_stdev = stdev(inference_time) / 1e6\n",
-    "        print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms.')\n",
     "        speed_ratio = inference_time_mean / (TESTING_DATASET_SEGMENT_LENGTH * 1e3)\n",
-    "        print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}.')\n",
+    "\n",
+    "        with open(job_eval_dir / f'inference-efficiency-{dataset_name}.txt', 'w') as f:\n",
+    "            print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms. ', file=f)\n",
+    "            print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms. ')\n",
+    "            print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms. ', file=f)\n",
+    "            print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms. ')\n",
+    "            print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}. ', file=f)\n",
+    "            print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}. ')\n",
     "\n",
     "evaluate_inference_efficiency()"
    ]
@@ -544,29 +303,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate Output Audio"
+    "## Evaluate Output Audio, Waveform Difference, RMS Difference, and STFT Difference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f6229e0e3dd40d18307054ff180e604",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Evaluate long dataset.:   0%|          | 0/14 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def acquire_rms(x: npt.NDArray[np.float32], window: int = 100):\n",
     "    assert x.ndim == 1\n",
@@ -587,8 +331,14 @@
     "\n",
     "        dataloader = DataLoader(dataset, 20, num_workers=8, pin_memory=True)\n",
     "\n",
-    "        output_dir = job_eval_dir / f'output-audio-{dataset_name}'\n",
-    "        output_dir.mkdir(exist_ok=True)\n",
+    "        output_audio_dir = job_eval_dir / f'output-audio-{dataset_name}'\n",
+    "        output_audio_dir.mkdir(exist_ok=True)\n",
+    "        output_rms_dir = job_eval_dir / f'output-rms-{dataset_name}'\n",
+    "        output_rms_dir.mkdir(exist_ok=True)\n",
+    "        output_waveform_dir = job_eval_dir / f'output-waveform-{dataset_name}'\n",
+    "        output_waveform_dir.mkdir(exist_ok=True)\n",
+    "        output_stft_dir = job_eval_dir / f'output-stft-{dataset_name}'\n",
+    "        output_stft_dir.mkdir(exist_ok=True)\n",
     "\n",
     "        ii = 0\n",
     "        for x, y, cond in tqdm(dataloader, desc=f'Evaluate {dataset_name} dataset.', total=len(dataloader)):\n",
@@ -620,17 +370,17 @@
     "                y_hat_rms = acquire_rms(y_hat_audio)\n",
     "                y_diff_rms = y_rms - y_hat_rms\n",
     "\n",
-    "                wavfile.write(output_dir / f'{prefix}-x.wav', SignalTrainDataset.sample_rate, x_audio)\n",
-    "                wavfile.write(output_dir / f'{prefix}-y.wav', SignalTrainDataset.sample_rate, y_audio)\n",
-    "                wavfile.write(output_dir / f'{prefix}-y-hat.wav', SignalTrainDataset.sample_rate, y_hat_audio)\n",
-    "                wavfile.write(output_dir / f'{prefix}-y-diff.wav', SignalTrainDataset.sample_rate, y_diff_audio)\n",
+    "                wavfile.write(output_audio_dir / f'{prefix}-x.wav', SignalTrainDataset.sample_rate, x_audio)\n",
+    "                wavfile.write(output_audio_dir / f'{prefix}-y.wav', SignalTrainDataset.sample_rate, y_audio)\n",
+    "                wavfile.write(output_audio_dir / f'{prefix}-y-hat.wav', SignalTrainDataset.sample_rate, y_hat_audio)\n",
+    "                wavfile.write(output_audio_dir / f'{prefix}-y-diff.wav', SignalTrainDataset.sample_rate, y_diff_audio)\n",
     "\n",
     "                fig, ax = plt.subplots(figsize=(25, 5))\n",
     "                ax.plot(y_diff_audio)\n",
     "                ax.set_title(f'{prefix}')\n",
     "                ax.set_xlabel('Time (s)')\n",
     "                ax.set_ylabel('Amplitude')\n",
-    "                fig.savefig(str(output_dir / f'{prefix}-y-diff.png'))\n",
+    "                fig.savefig(str(output_waveform_dir / f'{prefix}-y-diff.png'))\n",
     "                plt.close(fig)\n",
     "\n",
     "                fig, ax = plt.subplots(figsize=(25, 5))\n",
@@ -638,7 +388,7 @@
     "                ax.set_title(f'{prefix}')\n",
     "                ax.set_xlabel('Time (s)')\n",
     "                ax.set_ylabel('Amplitude')\n",
-    "                fig.savefig(str(output_dir / f'{prefix}-y-rms-diff.png'))\n",
+    "                fig.savefig(str(output_rms_dir / f'{prefix}-y-rms-diff.png'))\n",
     "                plt.close(fig)\n",
     "\n",
     "\n",
@@ -647,7 +397,7 @@
     "                ax.set_title(f'{prefix}')\n",
     "                ax.set_xlabel('Time (s)')\n",
     "                ax.set_ylabel('Magnitude')\n",
-    "                fig.savefig(str(output_dir / f'{prefix}-y-stft-diff.png'))\n",
+    "                fig.savefig(str(output_stft_dir / f'{prefix}-y-stft-diff.png'))\n",
     "                plt.close(fig)\n",
     "\n",
     "                ii += 1\n",
@@ -665,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
