update inference efficiency test

--- a/cond-task-eval.ipynb
+++ b/cond-task-eval.ipynb
@@ -76,35 +76,36 @@
    "outputs": [],
    "source": [
     "DATASET_DIR = Path('./data/SignalTrain')\n",
-    "\n",
     "CHECKPOINT_DIR = Path('./experiment-result')\n",
-    "\n",
-    "TESTING_DATASET_SEGMENT_LENGTH = 10.0\n",
-    "TESTING_DATASET_BATCH_SIZE = 5\n",
-    "TESTING_DATASET_SAMPLE_INDEX = [10, 20, 100, 200, 234]\n",
     "\n",
     "# Single chain without tanh\n",
     "# JOB_NAME = '2023-5-9-22-34-47'\n",
+    "# JOB_NAME = 'single-chain-no-tanh'\n",
     "# EPOCH = 54\n",
     "\n",
     "# Side chain without tanh\n",
     "# JOB_NAME = '2023-5-10-7-1-39'\n",
+    "# JOB_NAME = 'side-chain-no-tanh'\n",
     "# EPOCH = 68\n",
     "\n",
     "# Single chain with tanh\n",
     "# JOB_NAME = '2023-5-10-15-27-38'\n",
+    "# JOB_NAME = 'single-chain-tanh'\n",
     "# EPOCH = 66\n",
     "\n",
     "# Side chain with tanh\n",
     "# JOB_NAME = '2023-5-10-23-54-7'\n",
+    "# JOB_NAME = 'side-chain-tanh'\n",
     "# EPOCH = 66\n",
     "\n",
     "# Single chain with parametered tanh\n",
     "# JOB_NAME = '2023-6-28-3-32-47'\n",
+    "# JOB_NAME = 'single-chain-ptanh'\n",
     "# EPOCH = 52\n",
     "\n",
     "# Side chain with parametered tanh\n",
-    "JOB_NAME = '2023-6-28-16-11-36'\n",
+    "# JOB_NAME = '2023-6-28-16-11-36'\n",
+    "JOB_NAME = 'side-chain-ptanh'\n",
     "EPOCH = 40"
    ]
   },
@@ -140,6 +141,11 @@
     "    'short': testing_dataset_short,\n",
     "    'mid': testing_dataset_mid,\n",
     "    'long': testing_dataset_long,\n",
+    "}\n",
+    "testing_dataset_lengths = {\n",
+    "    'short': 1.5,\n",
+    "    'mid': 4,\n",
+    "    'long': 10,\n",
     "}\n",
     "\n",
     "model = S4ConditionalModel(\n",
@@ -266,12 +272,15 @@
     "def evaluate_inference_efficiency():\n",
     "    if device.type == 'cpu':\n",
     "        print(f'Doing inference speed test on CPU...')\n",
+    "        device_name = 'cpu'\n",
     "    elif device.type == 'cuda':\n",
-    "        print(f'Doing inference speed test on {torch.cuda.get_device_name()}.')\n",
-    "    \n",
-    "    print(f'Individual sample length: {TESTING_DATASET_SEGMENT_LENGTH} seconds.')\n",
+    "        print(f'Doing inference speed test on {(device_name := torch.cuda.get_device_name())}.')\n",
+    "    else:\n",
+    "        raise NotImplementedError(f'Inference efficiency test can only run on CPU/CUDA')\n",
     "\n",
     "    for dataset_name, testing_dataset in testing_datasets.items():\n",
+    "        dataset_sample_length = testing_dataset_lengths[dataset_name]\n",
+    "\n",
     "        inference_time: list[int] = []\n",
     "        for i in tqdm(range(10)):\n",
     "            x, _, cond = testing_dataset[i]\n",
@@ -285,15 +294,12 @@
     "        \n",
     "        inference_time_mean = mean(inference_time) / 1e6\n",
     "        inference_time_stdev = stdev(inference_time) / 1e6\n",
-    "        speed_ratio = inference_time_mean / (TESTING_DATASET_SEGMENT_LENGTH * 1e3)\n",
+    "        speed_ratio = inference_time_mean / (dataset_sample_length * 1e3)\n",
     "\n",
-    "        with open(job_eval_dir / f'inference-efficiency-{dataset_name}.txt', 'w') as f:\n",
+    "        with open(job_eval_dir / f'inference-efficiency-{dataset_name}-{device_name}.txt', 'w') as f:\n",
     "            print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms. ', file=f)\n",
-    "            print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms. ')\n",
     "            print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms. ', file=f)\n",
-    "            print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms. ')\n",
     "            print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}. ', file=f)\n",
-    "            print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}. ')\n",
     "\n",
     "evaluate_inference_efficiency()"
    ]
@@ -506,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
