update evaluation script

--- a/cond-task-eval.ipynb
+++ b/cond-task-eval.ipynb
@@ -78,35 +78,32 @@
     "DATASET_DIR = Path('./data/SignalTrain')\n",
     "CHECKPOINT_DIR = Path('./experiment-result')\n",
     "\n",
-    "# Single chain without tanh\n",
-    "# JOB_NAME = '2023-5-9-22-34-47'\n",
     "# JOB_NAME = 'single-chain-no-tanh'\n",
     "# EPOCH = 54\n",
     "\n",
-    "# Side chain without tanh\n",
-    "# JOB_NAME = '2023-5-10-7-1-39'\n",
     "# JOB_NAME = 'side-chain-no-tanh'\n",
     "# EPOCH = 68\n",
     "\n",
-    "# Single chain with tanh\n",
-    "# JOB_NAME = '2023-5-10-15-27-38'\n",
     "# JOB_NAME = 'single-chain-tanh'\n",
     "# EPOCH = 66\n",
     "\n",
-    "# Side chain with tanh\n",
-    "# JOB_NAME = '2023-5-10-23-54-7'\n",
     "# JOB_NAME = 'side-chain-tanh'\n",
     "# EPOCH = 66\n",
     "\n",
-    "# Single chain with parametered tanh\n",
-    "# JOB_NAME = '2023-6-28-3-32-47'\n",
     "# JOB_NAME = 'single-chain-ptanh'\n",
     "# EPOCH = 52\n",
     "\n",
-    "# Side chain with parametered tanh\n",
-    "# JOB_NAME = '2023-6-28-16-11-36'\n",
-    "JOB_NAME = 'side-chain-ptanh'\n",
-    "EPOCH = 40"
+    "# JOB_NAME = 'side-chain-ptanh'\n",
+    "# EPOCH = 40\n",
+    "\n",
+    "JOB_NAME = 'mae-single-chain-tanh'\n",
+    "EPOCH = 19\n",
+    "\n",
+    "# JOB_NAME = 'mae-side-chain-tanh'\n",
+    "# EPOCH = 26\n",
+    "\n",
+    "# JOB_NAME = 'mae-side-chain-no-tanh'\n",
+    "# EPOCH = 26"
    ]
   },
   {
@@ -184,10 +181,16 @@
     "        dataloader = DataLoader(dataset, 20, num_workers=8, pin_memory=True)\n",
     "\n",
     "        validation_criterions = forge_validation_criterions_by(param.loss_filter_coef, device)\n",
+    "        if device.type == 'cpu':\n",
+    "            print('Warning! ESR loss cannot be used on CPU. Contact Christian to fix.')\n",
+    "            validation_criterions.pop('ESR', None)\n",
+    "            validation_criterions.pop('ESR+DC', None)\n",
+    "            validation_criterions.pop('ESR+DC+Multi-STFT', None)\n",
     "        validation_losses = {\n",
     "            validation_loss: 0.0\n",
     "            for validation_loss in validation_criterions.keys()\n",
     "        }\n",
+    "\n",
     "\n",
     "        for x, y, parameters in tqdm(\n",
     "            dataloader, desc=f'Testing {dataset_name} datset.', total=len(dataloader)\n",
