changes to how to write evaluations

--- a/cond-task-eval.ipynb
+++ b/cond-task-eval.ipynb
@@ -6,11 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import time\n",
+    "from collections import defaultdict\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
     "from statistics import mean, stdev\n",
     "\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
@@ -26,7 +29,7 @@
     "from src.model import S4ConditionalModel\n",
     "from src.model.layer import DSSM, convert_to_decibel\n",
     "from src.parameter import ConditionalTaskParameter\n",
-    "from src.utils import get_tensor_device, set_random_seed_to"
+    "from src.utils import clear_memory, get_tensor_device, set_random_seed_to"
    ]
   },
   {
@@ -87,8 +90,8 @@
     "# JOB_NAME = 'single-chain-tanh'\n",
     "# EPOCH = 66\n",
     "\n",
-    "# JOB_NAME = 'side-chain-tanh'\n",
-    "# EPOCH = 66\n",
+    "JOB_NAME = 'side-chain-tanh'\n",
+    "EPOCH = 66\n",
     "\n",
     "# JOB_NAME = 'single-chain-ptanh'\n",
     "# EPOCH = 52\n",
@@ -96,8 +99,8 @@
     "# JOB_NAME = 'side-chain-ptanh'\n",
     "# EPOCH = 40\n",
     "\n",
-    "JOB_NAME = 'mae-single-chain-tanh'\n",
-    "EPOCH = 19\n",
+    "# JOB_NAME = 'mae-single-chain-tanh'\n",
+    "# EPOCH = 19\n",
     "\n",
     "# JOB_NAME = 'mae-side-chain-tanh'\n",
     "# EPOCH = 26\n",
@@ -131,18 +134,21 @@
     "set_random_seed_to(param.random_seed)\n",
     "\n",
     "download_signal_train_dataset_to(DATASET_DIR)\n",
+    "testing_dataset_terse = SignalTrainDataset(DATASET_DIR, 'test', 1.0)\n",
     "testing_dataset_short = SignalTrainDataset(DATASET_DIR, 'test', 1.5)\n",
     "testing_dataset_mid = SignalTrainDataset(DATASET_DIR, 'test', 4)\n",
     "testing_dataset_long = SignalTrainDataset(DATASET_DIR, 'test', 10)\n",
     "testing_datasets = {\n",
-    "    'short': testing_dataset_short,\n",
-    "    'mid': testing_dataset_mid,\n",
-    "    'long': testing_dataset_long,\n",
+    "    '1.0': testing_dataset_terse,\n",
+    "    '1.5': testing_dataset_short,\n",
+    "    '4.0': testing_dataset_mid,\n",
+    "    '10.0': testing_dataset_long,\n",
     "}\n",
     "testing_dataset_lengths = {\n",
-    "    'short': 1.5,\n",
-    "    'mid': 4,\n",
-    "    'long': 10,\n",
+    "    '1.0': 1.0,\n",
+    "    '1.5': 1.5,\n",
+    "    '4.0': 4.0,\n",
+    "    '10.0': 10.0,\n",
     "}\n",
     "\n",
     "model = S4ConditionalModel(\n",
@@ -177,7 +183,11 @@
    "source": [
     "@torch.no_grad()\n",
     "def test():\n",
+    "    losses = defaultdict(list)\n",
+    "\n",
     "    for dataset_name, dataset in testing_datasets.items():\n",
+    "        losses['dataset-name'].append(dataset_name)\n",
+    "\n",
     "        dataloader = DataLoader(dataset, 20, num_workers=8, pin_memory=True)\n",
     "\n",
     "        validation_criterions = forge_validation_criterions_by(param.loss_filter_coef, device)\n",
@@ -190,7 +200,6 @@
     "            validation_loss: 0.0\n",
     "            for validation_loss in validation_criterions.keys()\n",
     "        }\n",
-    "\n",
     "\n",
     "        for x, y, parameters in tqdm(\n",
     "            dataloader, desc=f'Testing {dataset_name} datset.', total=len(dataloader)\n",
@@ -208,8 +217,10 @@
     "        for k, v in list(validation_losses.items()):\n",
     "            validation_losses[k] = v / len(dataloader)\n",
     "        \n",
-    "        with open(job_eval_dir / f'loss-{dataset_name}.txt', 'w') as f:\n",
-    "            pprint(validation_losses, stream=f)\n",
+    "        for k, v in validation_losses.items():\n",
+    "            losses[k].append(v)\n",
+    "    \n",
+    "    pd.DataFrame(losses).to_csv(job_eval_dir / f'loss.csv')\n",
     "\n",
     "test()"
    ]
@@ -258,7 +269,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,36 +283,58 @@
    "source": [
     "@torch.no_grad()\n",
     "def evaluate_inference_efficiency():\n",
-    "    if device.type == 'cpu':\n",
-    "        print(f'Doing inference speed test on CPU...')\n",
-    "        device_name = 'cpu'\n",
-    "    elif device.type == 'cuda':\n",
-    "        print(f'Doing inference speed test on {(device_name := torch.cuda.get_device_name())}.')\n",
-    "    else:\n",
-    "        raise NotImplementedError(f'Inference efficiency test can only run on CPU/CUDA')\n",
+    "    sample_lengths: list[int] = [2 ** i for i in range(5, 20)]\n",
+    "    sample_lengths_string = list(map(str, sample_lengths))\n",
     "\n",
-    "    for dataset_name, testing_dataset in testing_datasets.items():\n",
-    "        dataset_sample_length = testing_dataset_lengths[dataset_name]\n",
+    "    local_devices = [torch.device('cpu')]\n",
+    "    if torch.cuda.is_available():\n",
+    "        local_devices.append(torch.device('cuda'))\n",
     "\n",
-    "        inference_time: list[int] = []\n",
-    "        for i in tqdm(range(10)):\n",
-    "            x, _, cond = testing_dataset[i]\n",
-    "            x = x.to(device).unsqueeze(0)\n",
-    "            cond = cond.to(device).unsqueeze(0)\n",
+    "    real_time_ratio_dict = defaultdict(list)\n",
+    "    for local_device in local_devices:\n",
+    "        if local_device.type == 'cpu':\n",
+    "            print(f'Doing inference speed test on {(device_name := device.type).upper()}...')\n",
+    "        elif local_device.type == 'cuda':\n",
+    "            print(f'Doing inference speed test on {(device_name := torch.cuda.get_device_name())}.')\n",
+    "        else:\n",
+    "            raise NotImplementedError(f'Inference efficiency test can only run on CPU/CUDA')\n",
     "\n",
-    "            tic = time.perf_counter_ns()\n",
-    "            model(x, cond)\n",
-    "            toc = time.perf_counter_ns()\n",
-    "            inference_time.append(toc - tic)\n",
+    "        real_time_ratio_dict['device-name'].append(device_name)\n",
+    "\n",
+    "        clear_memory()\n",
+    "\n",
+    "        speed_ratios = []\n",
+    "\n",
+    "        for dataset_sample_length in sample_lengths:\n",
+    "            dataset_sample_time_ns = dataset_sample_length * 1e9 / SignalTrainDataset.sample_rate\n",
+    "            dataset_sample_time = round(dataset_sample_time_ns / 1e9, 5)\n",
+    "\n",
+    "            inference_time_ns: list[int] = []\n",
+    "            for _ in tqdm(range(20), desc=f'Inference efficiency: {dataset_sample_time = }'):\n",
+    "                x = torch.rand(1, dataset_sample_length).to(device, torch.float32)\n",
+    "                cond = torch.tensor([[1, 65]]).to(device, torch.float32)\n",
+    "\n",
+    "                tic = time.perf_counter_ns()\n",
+    "                model(x, cond)\n",
+    "                toc = time.perf_counter_ns()\n",
+    "                inference_time_ns.append(toc - tic)\n",
+    "            \n",
+    "            inference_time_ns_mean = mean(inference_time_ns)\n",
+    "            real_time_ratio = dataset_sample_time_ns / inference_time_ns_mean\n",
+    "            speed_ratios.append(real_time_ratio)\n",
+    "            real_time_ratio_dict[str(dataset_sample_length)].append(real_time_ratio)\n",
     "        \n",
-    "        inference_time_mean = mean(inference_time) / 1e6\n",
-    "        inference_time_stdev = stdev(inference_time) / 1e6\n",
-    "        speed_ratio = inference_time_mean / (dataset_sample_length * 1e3)\n",
-    "\n",
-    "        with open(job_eval_dir / f'inference-efficiency-{dataset_name}-{device_name}.txt', 'w') as f:\n",
-    "            print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms. ', file=f)\n",
-    "            print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms. ', file=f)\n",
-    "            print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}. ', file=f)\n",
+    "        fig, ax = plt.subplots(figsize=(15, 5))\n",
+    "        ax.hlines([1.0], 0, len(sample_lengths) - 1, color='grey', linestyles='dashed')\n",
+    "        ax.plot(sample_lengths_string, speed_ratios, marker='d')\n",
+    "        ax.set_title(f'Inference Efficiency on {device_name.upper()}')\n",
+    "        ax.set_xlabel('Sample Length')\n",
+    "        ax.set_ylabel('Real-time Ratio')\n",
+    "        fig.savefig(str(job_eval_dir / f'inference-real-time-ratio-{device_name}.png'))\n",
+    "        plt.close(fig)\n",
+    "    \n",
+    "    dataframe = pd.DataFrame(real_time_ratio_dict)\n",
+    "    dataframe.to_csv(job_eval_dir / f'inference-real-time-ratio.csv')\n",
     "\n",
     "evaluate_inference_efficiency()"
    ]
@@ -462,6 +494,9 @@
     "        [1, 78],\n",
     "        [1, 97],\n",
     "    ]).to(device, torch.float32)\n",
+    "\n",
+    "    step_response_save_dir = job_eval_dir / 'model-step-response'\n",
+    "    step_response_save_dir.mkdir(exist_ok=True)\n",
     "    \n",
     "    sr = SignalTrainDataset.sample_rate\n",
     "    step_signal = torch.cat([\n",
@@ -477,16 +512,16 @@
     "    )\n",
     "    step_signal_decibel = convert_to_decibel(step_signal)\n",
     "    \n",
-    "    fig, axs = plt.subplots(10, 3, figsize=(15, 50))\n",
     "    for i, output_signal in enumerate(output_signals.split(1)):\n",
     "        switch, peak_reduction = parameter_pair[i].tolist()\n",
-    "        row, col = divmod(i, 3)\n",
-    "        ax = axs[row][col]\n",
+    "\n",
+    "        fig, ax = plt.subplots()\n",
     "        ax.plot(step_signal_decibel.cpu().numpy(), color='blue', linestyle='dashed', alpha=1.0)\n",
     "        ax.plot(convert_to_decibel(output_signal).flatten().cpu().numpy(), color='red', linestyle='solid', alpha=0.5)\n",
     "        ax.set_title(f'{switch = }, {peak_reduction = }')\n",
-    "    fig.savefig(str(job_eval_dir / f'model-step-response.png'))\n",
-    "    plt.close(fig)\n",
+    "\n",
+    "        fig.savefig(str(step_response_save_dir / f'model-step-response-{switch=}-{peak_reduction=}.png'))\n",
+    "        plt.close(fig)\n",
     "    \n",
     "evaluate_model_step_response()"
    ]
