--- a/dataset-analysis.ipynb
+++ b/dataset-analysis.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/int0thewind/.local/share/virtualenvs/s4-dynamic-range-compressor-WjUGfTKg/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "from pathlib import Path\n",
     "\n",
     "import torchaudio\n",
+    "import pandas as pd\n",
     "\n",
-    "from src.dataset import param_dict"
+    "from s4drc.src.dataset import param_dict"
    ]
   },
   {
@@ -162,6 +172,143 @@
     "    for d, f, _ in files:\n",
     "        total_num_frames += torchaudio.info(dataset_dir / d / f).num_frames / 44100\n",
     "    print(f'{param}: {total_num_frames = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = defaultdict(list)\n",
+    "\n",
+    "for k, vs in param_dict.items():\n",
+    "    switch_value, peak_reduction_value = k\n",
+    "    for split, input_file_name, target_file_name in vs:\n",
+    "        dic['filename'].append(input_file_name)\n",
+    "        dic['type'].append('input')\n",
+    "        dic['split'].append(split)\n",
+    "        dic['switch-value'].append(switch_value)\n",
+    "        dic['peak-reduction-value'].append(peak_reduction_value)\n",
+    "\n",
+    "        dic['filename'].append(target_file_name)\n",
+    "        dic['type'].append('target')\n",
+    "        dic['split'].append(split)\n",
+    "        dic['switch-value'].append(switch_value)\n",
+    "        dic['peak-reduction-value'].append(peak_reduction_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>type</th>\n",
+       "      <th>split</th>\n",
+       "      <th>switch-value</th>\n",
+       "      <th>peak-reduction-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>input_138_.wav</td>\n",
+       "      <td>input</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>target_138_LA2A_3c__0__0.wav</td>\n",
+       "      <td>target</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>input_222_.wav</td>\n",
+       "      <td>input</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>target_222_LA2A_2c__0__0.wav</td>\n",
+       "      <td>target</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>input_139_.wav</td>\n",
+       "      <td>input</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       filename    type  split  switch-value  \\\n",
+       "0                input_138_.wav   input  Train             0   \n",
+       "1  target_138_LA2A_3c__0__0.wav  target  Train             0   \n",
+       "2                input_222_.wav   input  Train             0   \n",
+       "3  target_222_LA2A_2c__0__0.wav  target  Train             0   \n",
+       "4                input_139_.wav   input  Train             0   \n",
+       "\n",
+       "   peak-reduction-value  \n",
+       "0                     0  \n",
+       "1                     0  \n",
+       "2                     0  \n",
+       "3                     0  \n",
+       "4                     5  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame.from_dict(dic)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('metadata.csv')"
    ]
   },
   {
